--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
 name = "rimer"
 version = "0.1.0"
-authors = ["xFA25E"]
+authors = ["Valeriy Litkovskyy <vlr.ltkvsk@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
-serde = { version = "1.0.116", features = ["derive"] }
-serde_json = "1.0.57"
 dirs = "3.0.1"
 clap = "2.33.3"
-daemonize = "0.4.1"
+serde = { version = "1.0.124", features = ["derive"] }
+serde_json = "1.0.64"
 
 [profile.release]
 lto = true
